corrige a função de listar usuarios no swagger
